[gd_scene load_steps=14 format=3 uid="uid://ve6l8s56vlvd"]

[ext_resource type="Texture2D" uid="uid://ct3y3lqimr5xc" path="res://assets/Background.png" id="1_yady3"]
[ext_resource type="FontFile" uid="uid://c10orfql5b8n1" path="res://assets/pong-score.ttf" id="2_jdl4f"]
[ext_resource type="Script" path="res://scenes/main.gd" id="2_y3110"]
[ext_resource type="Script" path="res://scenes/Player_1.gd" id="3_vci3c"]
[ext_resource type="AudioStream" uid="uid://cubesstleu0hp" path="res://assets/Pong Sound_Paddle.wav" id="4_isouw"]
[ext_resource type="Script" path="res://scenes/Ball.gd" id="4_jscgs"]
[ext_resource type="Script" path="res://scenes/Player_2.gd" id="4_radmq"]
[ext_resource type="AudioStream" uid="uid://dsgynd6l3jcs4" path="res://assets/Pong Sound_Wall.wav" id="7_dan44"]
[ext_resource type="AudioStream" uid="uid://bnqbn0vduih3u" path="res://assets/Pong Sound_Score.wav" id="9_w14m8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61u0n"]
size = Vector2(20, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e57b3"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wb7nj"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrgqe"]
size = Vector2(30, 656)

[node name="Main" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_yady3")
centered = false
script = ExtResource("2_y3110")

[node name="Player_1" type="StaticBody2D" parent="."]
position = Vector2(50, 320)
script = ExtResource("3_vci3c")

[node name="ColorRect" type="ColorRect" parent="Player_1"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -42.5
offset_right = 20.0
offset_bottom = 42.5
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_1"]
position = Vector2(10, -0.5)
shape = SubResource("RectangleShape2D_61u0n")

[node name="Audio-Paddle_Sound" type="AudioStreamPlayer2D" parent="Player_1"]
stream = ExtResource("4_isouw")

[node name="Player_2" type="StaticBody2D" parent="."]
position = Vector2(1082, 320)
script = ExtResource("4_radmq")

[node name="ColorRect" type="ColorRect" parent="Player_2"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -42.5
offset_right = 20.0
offset_bottom = 42.5
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_2"]
position = Vector2(10, -0.5)
shape = SubResource("RectangleShape2D_61u0n")

[node name="Audio-Paddle_Sound" type="AudioStreamPlayer2D" parent="Player_2"]
stream = ExtResource("4_isouw")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_jscgs")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_e57b3")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -8)
shape = SubResource("RectangleShape2D_wb7nj")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 656)
shape = SubResource("RectangleShape2D_wb7nj")

[node name="Audio-Wall_Sound" type="AudioStreamPlayer2D" parent="Borders"]
stream = ExtResource("7_dan44")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-16, 320)
shape = SubResource("RectangleShape2D_hrgqe")

[node name="Audio-Score_Sound" type="AudioStreamPlayer2D" parent="ScoreLeft"]
stream = ExtResource("9_w14m8")
volume_db = -8.0

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1168, 319)
shape = SubResource("RectangleShape2D_hrgqe")

[node name="Audio-Score_Sound" type="AudioStreamPlayer2D" parent="ScoreRight"]
stream = ExtResource("9_w14m8")
volume_db = -8.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Player1Score" type="Label" parent="HUD"]
offset_left = 480.0
offset_top = 5.0
offset_right = 530.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_jdl4f")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2Score" type="Label" parent="HUD"]
offset_left = 648.0
offset_top = 5.0
offset_right = 698.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_jdl4f")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
